# touch

./: CMakeLists.txt  package.xml  touch_install.sh
launch/: detection.launch  display.launch  gazebo.launch  rectangle.launch  setup.launch
rviz/: display.rviz
src/: .rectangle.cpp.swp  click_client.py  detect.py  detect_server.py  rectangle.cpp  redclipper.py
urdf/: touch.urdf  touch_sim.urdf
